--- a/WpfApp8/Views/MainWindow.xaml
+++ b/WpfApp8/Views/MainWindow.xaml
@@ -11,7 +11,7 @@
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance vm:MainViewModel, IsDesignTimeCreatable=True}"
         ui:WindowHelper.UseModernWindowStyle="True"
-        Title="MainWindow" Height="720" Width="1080">
+        Title="WpfApp8" Height="720" Width="1080">
     <Window.Resources>
         <!-- Opening -->
         <Storyboard x:Key="OpenMenu">
