--- a/WpfApp8/Views/SidePanelRight.xaml
+++ b/WpfApp8/Views/SidePanelRight.xaml
@@ -34,9 +34,9 @@
         </Grid.RowDefinitions>
 
         <HeaderedContentControl Header="管理通知" VerticalAlignment="Top" Grid.Row="0">
-            <ui:ListView x:Name="Control4" AllowDrop="True" 
+            <ui:ListView x:Name="Control4" AllowDrop="True"
                          ItemsSource="{Binding Notifications}"
-                         VirtualizingPanel.ScrollUnit="Pixel" 
+                         VirtualizingPanel.ScrollUnit="Pixel"
                          Margin="0,0,0,6" Width="256">
                 <ui:ListView.ItemTemplate>
                     <DataTemplate>
@@ -45,7 +45,7 @@
                               AutomationProperties.Name="{Binding Title, Mode=OneTime}">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="50" />
-                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="206" />
                             </Grid.ColumnDefinitions>
                             <Border Grid.Column="0">
                                 <Image Source="{Binding ImageLocation}"
