--- a/WpfApp8/Style/MyHeaderedContentControl.xaml
+++ b/WpfApp8/Style/MyHeaderedContentControl.xaml
@@ -1,12 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style TargetType="HeaderedContentControl">
-        <Setter Property="Margin" Value="0,0,0,0" />
+        <!-- 此处的Margin的bottom是针对下个同级Control的 -->
+        <Setter Property="Margin" Value="0,6,0,6" />
         <Setter Property="IsTabStop" Value="False" />
         <Setter Property="HeaderTemplate">
             <Setter.Value>
                 <DataTemplate>
-                    <Grid>
+                    <!-- 此处的Margin的bottom是针对子Control的 -->
+                    <Grid Margin="0,0,0,6">
                         <Rectangle x:Name="PART_Back" Fill="Transparent" />
                         <StackPanel Orientation="Horizontal" Margin="13,6,0,6" Height="40">
                             <TextBlock Width="6"
