--- a/WpfApp8/Control/MetroButton.xaml
+++ b/WpfApp8/Control/MetroButton.xaml
@@ -1,8 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:control1="clr-namespace:WpfApp8.Control">
+                    xmlns:control="clr-namespace:WpfApp8.Control">
 
-    <Style TargetType="{x:Type control1:MetroButton}" x:Key="MetroButtonStyle">
+    <Style TargetType="{x:Type control:MetroButton}" x:Key="MetroButtonStyle">
         <!--设置按钮的默认的样式-->
         <Setter Property="Cursor" Value="Hand" />
         <Setter Property="Height" Value="60" />
@@ -11,18 +11,17 @@
         <!--设置按钮的模板-->
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="control1:MetroButton">
+                <ControlTemplate TargetType="control:MetroButton">
                     <Border x:Name="PART_Bord" BorderThickness="1">
                         <Grid>
                             <Rectangle x:Name="PART_Back" Fill="{DynamicResource SystemControlBackgroundAltHighBrush}" />
                             <Path Data="{TemplateBinding Icon}" Height="24" Width="24"
-                                  Margin="5,5,0,0" Fill="{DynamicResource SystemControlForegroundBaseHighBrush}"
-                                  HorizontalAlignment="Left"
-                                  VerticalAlignment="Top" />
+                                  Margin="5,5,0,0"
+                                  Fill="{DynamicResource SystemControlForegroundBaseHighBrush}"
+                                  HorizontalAlignment="Left" VerticalAlignment="Top" />
                             <ContentPresenter
                                 Margin="5,0,5,5"
-                                HorizontalAlignment="Left"
-                                VerticalAlignment="Bottom" />
+                                HorizontalAlignment="Left" VerticalAlignment="Bottom" />
                         </Grid>
                     </Border>
 
