--- a/WpfApp8/Views/SidePanelRight.xaml
+++ b/WpfApp8/Views/SidePanelRight.xaml
@@ -6,8 +6,12 @@
              xmlns:control="clr-namespace:WpfApp8.Control"
              xmlns:vm="clr-namespace:WpfApp8.ViewModels"
              xmlns:ui="http://schemas.modernwpf.com/2019"
+             xmlns:converter="clr-namespace:WpfApp8.Converter"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance vm:MainViewModel, IsDesignTimeCreatable=True}">
+    <UserControl.Resources>
+        <converter:False2CollapsedConverter x:Key="False2CollapsedConverter" />
+    </UserControl.Resources>
     <!-- win10's background of side panel: SystemControlBackgroundAltMediumHighBrush -->
     <!-- Width60*4 + Margin4*4 + 边12*2 -->
     <Grid Background="{DynamicResource SystemControlBackgroundAltMediumHighBrush}">
@@ -16,10 +20,11 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <HeaderedContentControl Header="管理通知" VerticalAlignment="Top" Grid.Row="0">
+        <control:MyHeaderedContentControl Header="管理通知" VerticalAlignment="Top" Grid.Row="0" ClickCommand="{Binding CommandClickControl4}">
             <ui:ListView x:Name="Control4" AllowDrop="True"
                          ItemsSource="{Binding Notifications}"
                          VirtualizingPanel.ScrollUnit="Pixel"
+                         Visibility="{Binding VisibilityControl4, Converter={StaticResource False2CollapsedConverter}}"
                          Margin="0,0,0,6" Width="256">
                 <ui:ListView.ItemTemplate>
                     <DataTemplate>
@@ -72,9 +77,9 @@
                     </DataTemplate>
                 </ui:ListView.ItemTemplate>
             </ui:ListView>
-        </HeaderedContentControl>
+        </control:MyHeaderedContentControl>
 
-        <HeaderedContentControl x:Name="Control0" Header="控制面板" VerticalAlignment="Bottom" Grid.Row="1">
+        <control:MyHeaderedContentControl x:Name="Control0" Header="控制面板" VerticalAlignment="Bottom" Grid.Row="1">
             <WrapPanel Margin="12,0,12,12" Width="256">
                 <control:MetroButton Content="连接" Icon="{StaticResource IconGamepad}"
                                      Style="{StaticResource MetroButtonStyle}" Margin="2"
@@ -108,6 +113,6 @@
                                        Style="{DynamicResource MetroCheckBoxStyle}" Margin="2"
                                        IsChecked="{Binding IsProject}" />
             </WrapPanel>
-        </HeaderedContentControl>
+        </control:MyHeaderedContentControl>
     </Grid>
 </UserControl>
