--- a/App9.Map/MainWindow.xaml
+++ b/App9.Map/MainWindow.xaml
@@ -3,7 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:ui="http://schemas.modernwpf.com/2019"
         mc:Ignorable="d"
+        ui:WindowHelper.UseModernWindowStyle="True"
         Title="高德地图" Height="720" Width="1080">
     <Grid>
         <Grid.RowDefinitions>
@@ -11,9 +13,30 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <WebBrowser x:Name="WebBrowser" Grid.Row="0" />
-        <WrapPanel HorizontalAlignment="Left" VerticalAlignment="Bottom" Grid.Row="1">
-            <Button Content="修改地图之心" Margin="10" Click="ButtonChangeCenter_OnClick" />
-            <Button Content="回到原点" Margin="10" Click="ButtonAddPolygon_OnClick" />
-        </WrapPanel>
+            
+        <!-- 命令栏 -->
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            
+            <WrapPanel Grid.Column="0">
+                <Button Content="修改地图之心" Margin="10" Click="ButtonChangeCenter_OnClick" />
+                <Button Content="回到原点" Margin="10" Click="ButtonAddPolygon_OnClick" />
+            </WrapPanel>
+
+            <ui:CommandBar
+                VerticalAlignment="Center"
+                Background="Transparent"
+                DefaultLabelPosition="Right"
+                Grid.Column="1">
+                <ui:AppBarButton Click="OnThemeButtonClick" Label="Toggle Theme">
+                    <ui:AppBarButton.Icon>
+                        <ui:FontIcon Glyph="&#xE790;" Margin="0,-2,0,0" />
+                    </ui:AppBarButton.Icon>
+                </ui:AppBarButton>
+            </ui:CommandBar>
+        </Grid>
     </Grid>
 </Window>
