--- a/App10.Demo/Control/CircularProcessBar.xaml
+++ b/App10.Demo/Control/CircularProcessBar.xaml
@@ -1,4 +1,5 @@
-﻿<UserControl x:Class="App10.Demo.Control.CycleProcessBar"
+﻿<UserControl x:Class="App10.Demo.Control.CircularProcessBar"
+             x:Name="Root"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -8,8 +9,8 @@
     <Viewbox>
         <Grid Width="34" Height="34">
             <Path x:Name="PART_Bar" 
-                  Data="M17,3 A14,14 0 0 1 16,3 " 
-                  Stroke="Green" StrokeThickness="3"
+                  Data="M17,3 A14,14 0 0 1 17,31 " 
+                  Stroke="{Binding ElementName=Root, Path=MagicStroke}" StrokeThickness="3"
                   Height="34" Width="34" 
                   VerticalAlignment="Center" HorizontalAlignment="Center" />
             <Label x:Name="PART_Text" 
