增加App10 Weather;修改App05项目名以避免namespace冲突

--- a/App04.MultiLang/Views/MainWindow.xaml
+++ b/App04.MultiLang/Views/MainWindow.xaml
@@ -3,9 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:viewModels="clr-namespace:App04.MultiLang.ViewModels"
+        xmlns:vm="clr-namespace:App04.MultiLang.ViewModels"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance viewModels:MainViewModel, IsDesignTimeCreatable=True}"
+        d:DataContext="{d:DesignInstance vm:MainViewModel, IsDesignTimeCreatable=True}"
         Title="MainWindow" Height="350" Width="525">
     <Border BorderBrush="#2e6da4" BorderThickness="3">
         <Grid>
